style.css
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: 'Roboto', sans-serif;
}

body{
    display:flex;
    flex-direction: column;
    /* overflow: hidden; */
}

header{
    display: flex;
    justify-content: space-around;
    gap: 350px;
    background-color: #1F2937;
    color:#F9FAF8;
    padding : 24px 32px;
    font-size: 24px;
    flex: 1;
}
header > ul{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap : 16px;
}
header > ul > li, li > a{
    list-style: none;
    text-decoration: none ;
    color: #E5E7EB;
    font-size: 18px;
}
li > a:hover{
    background-color: white;
    color: #1F2937;
}
.contents{
    background-color: #1F2937;
    color: white;
    flex : 1;
    display: flex;
    justify-content: space-around;
    padding : 8px;
}
.contents  h1 {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8
}
.left-contents, .right-contents{
    margin: 15px 60px;
}
.left-contents > * {
    margin : 5px;
}
.contents > img {
    /* min-width : 35%; */
    width : 250px;
    background-color: grey;
}
.blogs{
    margin: 16px 0;
}
.blogs-container{
    flex: 1;
    display: flex;
    justify-content: space-around;
    padding: 40px;
    /* gap: 5px; */
}
.blogs > h2 {
    text-align: center;
    padding: 24px;
}
.blog-card{
    /* border: 1px solid black; */
    font-size: 10px;
    max-width: 150px;
    max-height: 150px;
    text-align: center;
}
.blog-card > img{
    width : 200px;
    border-radius: 10px;
    border: 3px solid #3882F6;
}
.quotes{
    flex: 1;
    background-color: #E5E7EB;
    padding: 64px 100px;
}
.quotes p:first-child {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    color: #1F2937;
    opacity: 0.7;
}
.quotes .author{
    text-align: right;
    font-weight: bold;
}

.sign-up-label{
    flex: 1;
    padding: 64px;
    color: white;
}
.sign-up-label > div{
    background-color: #3882F6;
    padding: 32px 64px;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.sign-up-label span{
    font-size: 24px;
    font-weight: bold;
}
button{
    background-color: #3882F6;
    padding: 10px 30px;
    border: none;
    color: white;
    border-radius: 8px;
    margin: 3px;
}
.sign-up-label button{
    flex: 1;
    border: 1px solid white;
    margin-left: 30px;
}

footer{
    flex: 0.5;
    padding: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1F2937;
    color:white;
}

